# thermostat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  temperature_controller.cpp  test_temperature_controller.cpp
src/: thermostat.cpp  thermostat.hpp
test/: test_thermostat.cpp
